--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#">Perter Parker</a>
+      <a class="navbar-brand" href="https://shreyas94.github.io/ADV-C68/">Perter Parker</a>
     </div>
     
     <div class="collapse navbar-collapse" id="myNavbar">
